syntax = "proto3";

package github.com.akuity.kargo.pkg.api.v1alpha1;

import "google/protobuf/timestamp.proto";
import "metav1/types.proto";

option go_package = "github.com/akuity/kargo/pkg/api/v1alpha1";

message ArgoCDAppUpdate {
  string app_name = 1 [json_name = "appName"];
  optional string app_namespace = 2 [json_name = "appNamespace"];
  repeated ArgoCDSourceUpdate source_updates = 3 [json_name = "sourceUpdates"];
}

message ArgoCDHelm {
  repeated ArgoCDHelmImageUpdate images = 1 [json_name = "images"];
}

message ArgoCDHelmImageUpdate {
  string image = 1 [json_name = "image"];
  string key = 2 [json_name = "key"];
  string value = 3 [json_name = "value"];
}

message ArgoCDKustomize {
  repeated ArgoCDKustomizeImageUpdate images = 1 [json_name = "images"];
}

message ArgoCDKustomizeImageUpdate {
  string image = 1 [json_name = "image"];
  bool use_digest = 2 [json_name = "useDigest"];
}

message ArgoCDSourceUpdate {
  string repo_url = 1 [json_name = "repoURL"];
  optional string chart = 2 [json_name = "chart"];
  optional bool update_target_revision = 3 [json_name = "updateTargetRevision"];
  optional ArgoCDKustomize kustomize = 4 [json_name = "kustomize"];
  optional ArgoCDHelm helm = 5 [json_name = "helm"];
}

message KargoRenderPromotionMechanism {
}

message Chart {
  string registry_url = 1 [json_name = "registryURL"];
  string name = 2 [json_name = "name"];
  string version = 3 [json_name = "version"];
}

message ChartSubscription {
  string registry_url = 1 [json_name = "registryURL"];
  optional string name = 2 [json_name = "name"];
  optional string semver_constraint = 3 [json_name = "semverConstraint"];
}

message GitCommit {
  string repo_url = 1 [json_name = "repoURL"];
  string id = 2 [json_name = "id"];
  string branch = 3 [json_name = "branch"];
  optional string health_check_commit = 4 [json_name = "healthCheckCommit"];
  string message = 5 [json_name = "message"];
  string author = 6 [json_name = "author"];
}

message GitRepoUpdate {
  string repo_url = 1 [json_name = "repoURL"];
  optional string read_branch = 2 [json_name = "readBranch"];
  string write_branch = 3 [json_name = "writeBranch"];
  optional KustomizePromotionMechanism kustomize = 5 [json_name = "kustomize"];
  optional HelmPromotionMechanism helm = 6 [json_name = "helm"];
  optional KargoRenderPromotionMechanism render = 7 [json_name = "render"];
}

message GitSubscription {
  string repo_url = 1 [json_name = "repoURL"];
  string branch = 2 [json_name = "branch"];
}

message Health {
  string status = 1 [json_name = "status"];
  repeated string issues = 2 [json_name = "issues"];
  repeated ArgoCDAppState argocd_apps = 3 [json_name = "argoCDApps"];
}

message ArgoCDAppState {
  string namespace = 1 [json_name = "namespace"];
  string name = 2 [json_name = "name"];
  ArgoCDAppHealthStatus health_status = 3 [json_name = "healthStatus"];
  ArgoCDAppSyncStatus sync_status = 4 [json_name = "syncStatus"];
}

message ArgoCDAppHealthStatus {
  string status = 1 [json_name = "status"];
  string message = 2 [json_name = "message"];
}

message ArgoCDAppSyncStatus {
  string status = 1 [json_name = "status"];
  string revision = 2 [json_name = "revision"];
  repeated string revisions = 3 [json_name = "revisions"];
}

message HelmChartDependencyUpdate {
  string registry_url = 1 [json_name = "registryURL"];
  string name = 2 [json_name = "name"];
  string chart_path = 3 [json_name = "chartPath"];
}

message HelmImageUpdate {
  string image = 1 [json_name = "image"];
  string values_file_path = 2 [json_name = "valuesFilePath"];
  string key = 3 [json_name = "key"];
  string value = 4 [json_name = "value"];
}

message HelmPromotionMechanism {
  repeated HelmImageUpdate images = 1 [json_name = "images"];
  repeated HelmChartDependencyUpdate charts = 2 [json_name = "charts"];
}

message Image {
  string repo_url = 1 [json_name = "repoURL"];
  string tag = 2 [json_name = "tag"];
  string digest = 3 [json_name = "digest"];
}

message ImageSubscription {
  string repo_url = 1 [json_name = "repoURL"];
  string tag_selection_strategy = 2 [json_name = "imageTagSelectionStrategy"];
  optional string semver_constraint = 3 [json_name = "semverConstraint"];
  optional string allow_tags = 4 [json_name = "allowTags"];
  repeated string ignore_tags = 5 [json_name = "ignoreTags"];
  optional string platform = 6 [json_name = "platform"];
}

message KustomizeImageUpdate {
  string image = 1 [json_name = "image"];
  string path = 2 [json_name = "path"];
  bool use_digest = 3 [json_name = "useDigest"];
}

message KustomizePromotionMechanism {
  repeated KustomizeImageUpdate images = 1 [json_name = "images"];
}

message Promotion {
  string api_version = 1 [json_name = "apiVersion"];
  string kind = 2 [json_name = "kind"];
  optional github.com.akuity.kargo.pkg.api.metav1.ObjectMeta metadata = 3 [json_name = "metadata"];
  PromotionSpec spec = 4 [json_name = "spec"];
  PromotionStatus status = 5 [json_name = "status"];
}

message PromotionInfo {
  string name = 1 [json_name = "name"];
  SimpleFreight freight = 2 [json_name = "freight"];
}

message PromotionList {
  optional github.com.akuity.kargo.pkg.api.metav1.ListMeta metadata = 1 [json_name = "metadata"];
  repeated Promotion items = 2 [json_name = "items"];
}

message PromotionMechanisms {
  repeated GitRepoUpdate git_repo_updates = 1 [json_name = "gitRepoUpdates"];
  repeated ArgoCDAppUpdate argocd_app_updates = 2 [json_name = "argoCDAppUpdates"];
}

message PromotionPolicy {
  string api_version = 1 [json_name = "apiVersion"];
  string kind = 2 [json_name = "kind"];
  github.com.akuity.kargo.pkg.api.metav1.ObjectMeta metadata = 3 [json_name = "metadata"];
  string stage = 4 [json_name = "stage"];
  bool enable_auto_promotion = 5 [json_name = "enableAutoPromotion"];
}

message PromotionPolicyList {
  github.com.akuity.kargo.pkg.api.metav1.ListMeta metadata = 1 [json_name = "metadata"];
  repeated PromotionPolicy items = 2 [json_name = "items"];
}

message PromotionSpec {
  string stage = 1 [json_name = "stage"];
  string freight = 2 [json_name = "freight"];
}

message PromotionStatus {
  string phase = 1 [json_name = "phase"];
  string error = 2 [json_name = "error"];
}

message RepoSubscription {
  optional GitSubscription git = 1 [json_name = "git"];
  optional ImageSubscription image = 2 [json_name = "image"];
  optional ChartSubscription chart = 3 [json_name = "chart"];
}

message Stage {
  string api_version = 1 [json_name = "apiVersion"];
  string kind = 2 [json_name = "kind"];
  github.com.akuity.kargo.pkg.api.metav1.ObjectMeta metadata = 3 [json_name = "metadata"];
  StageSpec spec = 4 [json_name = "spec"];
  StageStatus status = 5 [json_name = "status"];
}

message StageList {
  github.com.akuity.kargo.pkg.api.metav1.ListMeta metadata = 1 [json_name = "metadata"];
  repeated Stage items = 2 [json_name = "items"];
}

message StageSpec {
  Subscriptions subscriptions = 1 [json_name = "subscriptions"];
  PromotionMechanisms promotion_mechanisms = 2 [json_name = "promotionMechanisms"];
}

message Freight {
  string api_version = 1 [json_name = "apiVersion"];
  string kind = 2 [json_name = "kind"];
  github.com.akuity.kargo.pkg.api.metav1.ObjectMeta metadata = 3 [json_name = "metadata"];
  string id = 4 [json_name = "id"];
  repeated GitCommit commits = 5 [json_name = "commits"];
  repeated Image images = 6 [json_name = "images"];
  repeated Chart charts = 7 [json_name = "charts"];
  FreightStatus status = 8 [json_name = "status"];
}

message FreightStatus {
  map<string, VerifiedStage> verified_in = 1;
  map<string, ApprovedStage> approved_for = 2;
}

message VerifiedStage {
}

message ApprovedStage {
}

message SimpleFreight {
  string id = 1 [json_name = "id"];
  optional google.protobuf.Timestamp first_seen = 2 [json_name = "firstSeen"];
  repeated GitCommit commits = 4 [json_name = "commits"];
  repeated Image images = 5 [json_name = "images"];
  repeated Chart charts = 6 [json_name = "charts"];
}

message StageStatus {
  optional SimpleFreight current_freight = 2 [json_name = "currentFreight"];
  repeated SimpleFreight history = 3 [json_name = "history"];
  string error = 4 [json_name = "error"];
  optional Health health = 5 [json_name = "health"];
  optional PromotionInfo current_promotion = 6 [json_name = "currentPromotion"];
}

message StageSubscription {
  string name = 1 [json_name = "name"];
}

message Subscriptions {
  repeated StageSubscription upstream_stages = 2 [json_name = "upstreamStages"];
  string warehouse = 3 [json_name = "warehouse"];
}

message Warehouse {
  string api_version = 1 [json_name = "apiVersion"];
  string kind = 2 [json_name = "kind"];
  github.com.akuity.kargo.pkg.api.metav1.ObjectMeta metadata = 3 [json_name = "metadata"];
  WarehouseSpec spec = 4 [json_name = "spec"];
  WarehouseStatus status = 5 [json_name = "status"];
}

message WarehouseSpec {
  repeated RepoSubscription subscriptions = 1 [json_name = "subscriptions"];
}

message WarehouseStatus {
  string error = 1 [json_name = "error"];
  int64 observed_generation = 2 [json_name = "observedGeneration"];
}
